--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.mvc.view.suffix=.jsp
 
 
 # Hibernate
-hibernate.dialect= org.hibernate.dialect.MySQLDialect
+hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 hibernate.show_sql= true
 hibernate.hbm2ddl.auto= update
 #entitymanager.packagesToScan:
@@ -38,3 +38,11 @@ entitymanager.packagesToScan= com
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
+spring.datasource.username=root
+spring.datasource.password=rootpassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
